Tests/Examples/bad/parse/UnclosedLeftParenHard.lifp
((some ((((((more((()((((())))((a b c d)) e)))))))) f))))
